<resources>
    <string name="app_name">Study Buddy</string>
    <string name="app">Study Buddy</string>

    <!--Login Page Attribute names -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup_link">Don\'t have an account? Sign up here!</string>

    <!--Sign Up Page Attribute names -->
    <string name="create_an_account">Create Account</string>
    <string name="username_hint">Username</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signup_button">Sign Up</string>
    <string name="password">password</string>
    <string name="confirm_password">confirmPassword</string>
    <string name="password_no_match">Passwords do not match!</string>
    <string name="login_here">Already have an account? Login here!</string>

    <!--User Profile Activity -->
    <string name="text_progress_bar">1/5</string>
    <string name="title">Tell us about yourself</string>

    <!--User Preferred Topic -->
    <string name="topic_title">What is your preferred topic?</string>

    <!--User Preferred Study Time -->
    <string name="time_title">When do you prefer to study?</string>
    <string name="progress_2">2/5</string>
    <string name="cs">Computer Science</string>
    <string name="bio">Biology</string>
    <string name="chem">Chemistry</string>
    <string name="engineering">Engineering</string>
    <string name="french">French</string>
    <string name="eng">English</string>
    <string name="phy">Physics</string>
    <string name="philosophy">Philosophy</string>
    <string name="history">History</string>
    <string name="maths">Mathematics</string>

    <string name="button_save_preferences">Continue</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--User Preferred Time Screen -->
    <string name="progress_3">3/5</string>
    <string name="weekdays">Weekdays</string>
    <string name="weekday_morning">Weekday Morning</string>
    <string name="weekday_afternoon">Weekday Afternoon</string>
    <string name="weekday_evening">Weekday Evening</string>
    <string name="weekend">Weekends</string>
    <string name="weekend_morning">Weekend Morning</string>
    <string name="weekend_afternoon">Weekend Afternoon</string>
    <string name="weekend_evening">Weekend Evening</string>

    <!--User Preferred Difficulty Level -->
    <string name="progress_4">4/5</string>
    <string name="difficulty_question">What is your preferred difficulty level?</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <!--User Profile -->
    <string name="user_interests">Connect with me if you want to study</string>
    <string name="social">Visit to know more!</string>

    <string name="forgot_password_subheading">No worries, we\'ll send you reset instructions.</string>
    <string name="email_password">Enter your email</string>
    <string name="back_to_login">Back to Login</string>
    <string name="reset_password_email">Reset Password</string>
    <string name="email_send_confirmation">We\'ve processed your request. If the email address is linked to an account, you\'ll receive reset instructions soon.</string>

    <!--Socials  -->
    <string name="progress_5">5/5</string>


</resources>