<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditMyTopicPreferences">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:background="@drawable/account_bg_oval">

        <!-- Main Content (ScrollView for dynamic height) -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="bottom"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:src="@drawable/baseline_keyboard_backspace_24"
                    app:tint="@color/white" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="136dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                app:layout_constraintEnd_toEndOf="@+id/textQuestion"
                app:layout_constraintTop_toBottomOf="@+id/textQuestion"
                tools:ignore="NotSibling">

                <TextView
                    android:id="@+id/textQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Edit your topic Preferences"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/myScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_above="@+id/saveButton"
            android:layout_below="@+id/constraintLayout5"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/editCheckComputerScience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cs"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/editCheckBiology"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bio"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/editCheckChemistry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chem"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/editCheckMathematics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/maths"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/editCheckEngineering"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/engineering"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/editCheckPhysics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phy"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/editCheckEnglish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eng"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/editCheckHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/editCheckPhilosophy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/philosophy"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/editCheckFrench"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/french"
                    android:textColor="#333333"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>

        <!-- Next Button -->
        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/primaryColor"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>