<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/account_bg_oval"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditPreferredTime">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="24dp"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/imageConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/backButtonConstraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white"
                    app:srcCompat="@drawable/baseline_keyboard_backspace_24" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="84dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backButtonConstraint"
                tools:ignore="NotSibling">

                <TextView
                    android:id="@+id/textQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Edit your Preferred Time"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="490dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout8"
                tools:layout_editor_absoluteX="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >



                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/weekdays"
                            android:textColor="#333333"
                            android:textSize="16sp" />

                        <CheckBox
                            android:id="@+id/checkWeekdayMorning"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/weekday_morning"
                            android:textColor="#333333"
                            android:textSize="16sp" />

                        <CheckBox
                            android:id="@+id/checkWeekdayAfternoon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/weekday_afternoon"
                            android:textColor="#333333"
                            android:textSize="16sp" />

                        <CheckBox
                            android:id="@+id/checkWeekdayEvening"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/weekday_evening"
                            android:textColor="#333333"
                            android:textSize="16sp" />

                        <!-- Weekend Study Time -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/weekend"
                            android:textColor="#333333"
                            android:textSize="16sp" />

                        <CheckBox
                            android:id="@+id/checkWeekendMorning"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/weekend_morning"
                            android:textColor="#333333"
                            android:textSize="16sp" />

                        <CheckBox
                            android:id="@+id/checkWeekendAfternoon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/weekend_afternoon"
                            android:textColor="#333333"
                            android:textSize="16sp" />

                        <CheckBox
                            android:id="@+id/checkWeekendEvening"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/weekend_evening"
                            android:textColor="#333333"
                            android:textSize="16sp" />

                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/buttonSaveProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="4dp"
                android:backgroundTint="@color/primaryColor"
                android:padding="12dp"
                android:text="Save"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>